--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
+
+<h1>Hello World, Welcome to my Github page.</h1>
 <p>I'm hosted with GitHub Pages.</p>
 </body>
+
 </html>
