--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 
 <h1>Hello World, Welcome to my Github page.</h1>
 <p>I'm hosted with GitHub Pages.</p>
+
+<p>I'm going to make this into my portfolio :D</p>
 </body>
 
 </html>
